// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SingleInfo /> check how renders should render correctly for address and with button 1`] = `
<DocumentFragment>
  .c4 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c4:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  word-break: break-all;
  font-size: 1.5rem;
}

.c1 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: left;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c0 > *:not(:last-child) {
  margin-bottom: 1.2rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.8rem;
}

<div
    class="c0"
    data-testid="SingleInfo-Address"
    direction="column"
    spacing="2"
    width="100%"
    wrap="nowrap"
  >
    <h4
      class="c1"
      font-size=""
    >
      Address
    </h4>
    <div
      class="c2"
      direction="column"
      spacing="1"
      width="100%"
      wrap="nowrap"
    >
      <span
        class="c3"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        Street 1
      </span>
      <span
        class="c3"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        00-000 City
      </span>
      <span
        class="c3"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        Poland
      </span>
    </div>
    <button
      class="c4"
      color="blue"
      data-testid="SingleInfo-Address-btn"
      type="button"
    >
      Change
    </button>
  </div>
</DocumentFragment>
`;

exports[`<SingleInfo /> check how renders should render correctly for contacts (both hidden) and without button 1`] = `
<DocumentFragment>
  .c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  word-break: break-all;
  font-size: 1.5rem;
}

.c1 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: left;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c0 > *:not(:last-child) {
  margin-bottom: 1.2rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.8rem;
}

<div
    class="c0"
    data-testid="SingleInfo-Contacts"
    direction="column"
    spacing="2"
    width="100%"
    wrap="nowrap"
  >
    <h4
      class="c1"
      font-size=""
    >
      Contacts
    </h4>
    <div
      class="c2"
      direction="column"
      spacing="1"
      width="100%"
      wrap="nowrap"
    >
      <span
        class="c3"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        Email: hidden
      </span>
      <span
        class="c3"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        Phone number: hidden
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SingleInfo /> check how renders should render correctly for contacts (both visible) and with button 1`] = `
<DocumentFragment>
  .c4 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c4:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  word-break: break-all;
  font-size: 1.5rem;
}

.c1 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: left;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c0 > *:not(:last-child) {
  margin-bottom: 1.2rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.8rem;
}

<div
    class="c0"
    data-testid="SingleInfo-Contacts"
    direction="column"
    spacing="2"
    width="100%"
    wrap="nowrap"
  >
    <h4
      class="c1"
      font-size=""
    >
      Contacts
    </h4>
    <div
      class="c2"
      direction="column"
      spacing="1"
      width="100%"
      wrap="nowrap"
    >
      <span
        class="c3"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        Email: visible
      </span>
      <span
        class="c3"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        Phone number: visible
      </span>
    </div>
    <button
      class="c4"
      color="blue"
      data-testid="SingleInfo-Contacts-btn"
      type="button"
    >
      Change
    </button>
  </div>
</DocumentFragment>
`;

exports[`<SingleInfo /> check how renders should render correctly for name and with button 1`] = `
<DocumentFragment>
  .c3 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c3:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c2 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  word-break: break-all;
  font-size: 1.5rem;
}

.c1 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: left;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c0 > *:not(:last-child) {
  margin-bottom: 1.2rem;
}

<div
    class="c0"
    data-testid="SingleInfo-Name"
    direction="column"
    spacing="2"
    width="100%"
    wrap="nowrap"
  >
    <h4
      class="c1"
      font-size=""
    >
      Name
    </h4>
    <span
      class="c2"
      color=""
      display="inline-block"
      overflow="visible"
      size="3"
      spacing="0px"
      transform=""
    >
      Ludwig von Mises
    </span>
    <button
      class="c3"
      color="blue"
      data-testid="SingleInfo-Name-btn"
      type="button"
    >
      Change
    </button>
  </div>
</DocumentFragment>
`;
